fixed issue with multiple reactor registrations